# nexus-collaboration

./: .gitignore  IMPLEMENTATION_COMPLETE.md  LICENSE  LICENSE.md  README.md  SUBTASK_FIX.md  docker-compose.yml  folder-structure.txt
ai_service/: pyproject.toml
ai_service/mcp-course/demo-server/: client_fastmcp.py  client_mcp.py  server.py
ai_service/mcp-course/local-agent/: agentic_client.py  math_server.py  mcp-http.json  mcp.json  weather.py
ai_service/mcp-course/mcp-server-data-analysis/: support_tickets_data.xlsx
ai_service/mcp-course/mcp-tools-resources-prompts/: server.py
ai_service/mcp-course/weather/: client.py  server.py
ai_service/test_mcp/: client.py  langchain_mcp_client.py  terminal_server.py  weather.py
backend/: .gitignore  REMINDER_GUIDE.md  jest.config.js  nodemon.json  package-lock.json  package.json
backend/prisma/: check_and_clean_tasklinks.sql  schema.prisma
backend/scripts/: clean-task-relationships.ts
backend/src/: index.ts  test-reminder.ts
frontend/: jest.config.js  jest.setup.js  middleware.ts  next-auth.d.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  livekit.css  page.tsx
frontend/components/: S3Upload.tsx
frontend/hooks/: use-calendar-data.ts  use-chat.ts  use-dashboard-data.ts  use-deadlines.ts  use-header-logic.ts  use-hero-animation.ts  use-messages.ts  use-pending-invitations.ts  use-project-data.ts  use-projects.ts  use-tasks-data.ts  useAddLinkedTask.ts  useAddSubtask.ts  useConversationList.ts  useCreateProject.ts  useDirectChat.ts  (+13 more)
(+420 files in other folders)
